--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlogCraft - Modern Blogging Platform</title>
+    <title>Mishary-Hub Blogsite</title>
     <meta name="description" content="Create amazing stories and share your voice with BlogCraft, the modern blogging platform." />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
